# sink

./: .gitignore  README.org  TODO.org  pyproject.toml  setup.py  sink-logo.sketch  sink.py
sink/: actions.py  applications.py  check.py  command.py  config.py  db.py  deploy.py  init.py  rsync.py  sink.py  ssh.py  ui.py  vm.py
sink/resources/: Vagrantfile
